[package]
name = "coloured-strings"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Crate that makes colouring strings easy."
repository = "https://github.com/Rar3Pineapple/Coloured-Strings"
readme = "README.md"
keywords = ["graphics", "string"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
